# hr-langchain-chainlit-docker-deployment-template

./: Dockerfile  docker-compose.yml  pyproject.toml
demo_app/: main.py
