[project]
name = "hr-langchain-chainlit-docker-deployment-template"
version = "0.1.0"
description = ""
authors = [{name = "Hussein xxx",email = "id721@users.noreply.github.com"}]
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
packages = [{include = "hr-langchain-chainlit-docker-deployment-template"}]

[tool.poetry.dependencies]
langchain = "0.3.24"
chainlit = "2.5.5"
cython = "^3.0.0b1"
langchain-community = "^0.3.22"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

